2005-02-04  Neil Horman  <nhorman@gmail.com>

	* src/command.c (command): Added KEY_RESIZE event case to 
	command switch to handle window re-drawing when a resize 
	event was received.

	* src/input.c (mygetch): Added error checking of return code
	to restart call to getch in the event it returned early due
	to a signal being delivered.

	* src/main.c (main): Registered a signal handler for the 
	SIGWINCH handler which is delivered when a terminal is 
	resized.  Handler pushes a KEY_RESIZE event onto the head 
	of the command input queue.

2005-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/build.c (build): Keep interactive mode on, even if on a
	terminal, if verbose mode (-v) was turned on.

2005-01-31  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/scanner.h: Declare yytext signed on AIX (without stating a
	version number, for now).

2005-01-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/mypopen.c (mypopen): Make closing argument to execlp() a
	manifest null pointer, not just a zero.

2004-12-08  Neil Horman  <nhorman@gmail.com>
	
	* src/dir.c: Fix to dissallow unreadable files from 
	srcfiles list (sourceforge bug number 1040690)

2004-12-06  Neil Horman  <nhorman@gmail.com>
	
	* src/main.c: Fix for temp file security bug (sourceforge 
	bug number 1062807 / CAN-2004-0970)

2004-11-22  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* doc/cscope.1: Make ESR happy: change man page summary section to
	avoid [0-9] syntax.

2004-10-27  Hans-Bernhard Broeker  <broeker@accip02.physik.rwth-aachen.de>

	* src/display.c (search): Replace duplicated code by a call to
	countrefs().  Duplicate lacked adjustment of column widths in case
	of very long function/file names.  Thanks to Darlene Wong for
	spotting this.

	* src/global.h (countrefs): Prototype added.

	* src/command.c (countrefs): Made globally available.

2004-06-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
